# macos-spotify-lyrics

./: .gitignore  README.md  lyrics.py  macos-spotify-lyrics.py  pyproject.toml  requirements.txt
app/: .env_example  __main__.py  cli.py  lyrics.py
